# skylendar

./: README.md  install.sh  skyadmin.md
skylendar/skylendar-4.1nn/: AUTHORS  CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  HISTORY.txt  README  TODO  config.h.cmake
skylendar/skylendar-4.1nn/PaxHeaders.21825/: AUTHORS  CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  HISTORY.txt  README  TODO  config.h.cmake  src
skylendar/skylendar-4.1nn/cmake/modules/PaxHeaders.21825/: FindGettext.cmake
skylendar/skylendar-4.1nn/src/: Boundaries.txt  CMakeLists.txt  ConsNames.txt  Country.txt  D1901.txt  Degrees.txt  ExtraObjs.txt  Interpret.txt  Intertarots.txt  Messages.sh  Parts.txt  Place.txt  Stars.txt  Tarots.txt  about.ui  access.ui  aspconflist.cpp  aspconflist.h  asprestr.cpp  asprestr.h  asprestr.ui  aspscanlist.cpp  aspscanlist.h  asteroid.ui  astroaccess.h  astroapp.cpp  astroapp.h  astroaspects.cpp  astroaspects.h  astroaspectsarray.cpp  astroaspectsarray.h  astrobatch.cpp  astrobatch.h  astrochart.cpp  astrochart.h  astrochartbase.cpp  astrochartbase.h  astrochoosecol.h  astroconstellations.cpp  astroconstellations.h  (+166 more)
skylendar/skylendar-4.1nn/src/PaxHeaders.21825/: Boundaries.txt  CMakeLists.txt  ConsNames.txt  Country.txt  D1901.txt  Degrees.txt  ExtraObjs.txt  Interpret.txt  Intertarots.txt  Messages.sh  Parts.txt  Place.txt  Stars.txt  Tarots.txt  about.ui  access.ui  aspconflist.cpp  aspconflist.h  asprestr.cpp  asprestr.h  asprestr.ui  aspscanlist.cpp  aspscanlist.h  asteroid.ui  astroaccess.h  astroapp.cpp  astroapp.h  astroaspects.cpp  astroaspects.h  astroaspectsarray.cpp  astroaspectsarray.h  astrobatch.cpp  astrobatch.h  astrochart.cpp  astrochart.h  astrochartbase.cpp  astrochartbase.h  astrochoosecol.h  astroconstellations.cpp  astroconstellations.h  (+180 more)
skylendar/skylendar-4.1nn/src/pics/: CMakeLists.txt
skylendar/skylendar-4.1nn/src/pics/PaxHeaders.21825/: CMakeLists.txt  tarots
skylendar/skylendar-4.1nn/src/pics/tarots/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
skylendar/skylendar-4.1nn/src/pics/tarots/PaxHeaders.21825/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
skylendar/skylendar-4.1nn/src/swe/: CMakeLists.txt
skylendar/skylendar-4.1nn/src/swe/PaxHeaders.21825/: CMakeLists.txt  LICENSE  swecl.c  swedate.c  swedate.h  swedll.h  swehel.c  swehouse.c  swehouse.h  swejpl.c  swejpl.h  swemmoon.c  swemosh.h  swemplan.c  swemptab.c  swemptab.h  swenut2000a.h  sweodef.h  swepcalc.c  swepcalc.h  swepdate.c  sweph.c  sweph.h  swephexp.h  swephlib.c  swephlib.h
skylendar/skylendar-4.1nn/src/zoneinfo/: iso3166.tab  zone.tab
skylendar/skylendar-4.1nn/src/zoneinfo/Africa/PaxHeaders.21825/: Addis_Ababa  Bamako  Harare  Kinshasa  Tunis
skylendar/skylendar-4.1nn/src/zoneinfo/America/Argentina/PaxHeaders.21825/: Buenos_Aires  Rio_Gallegos
skylendar/skylendar-4.1nn/src/zoneinfo/America/Indiana/PaxHeaders.21825/: Knox  Vevay  Vincennes  Winamac
skylendar/skylendar-4.1nn/src/zoneinfo/America/North_Dakota/PaxHeaders.21825/: Beulah  Center
skylendar/skylendar-4.1nn/src/zoneinfo/America/PaxHeaders.21825/: Anguilla  Asuncion  Atka  Bogota  Buenos_Aires  Cancun  Cordoba  Creston  Ensenada  Fort_Nelson  Glace_Bay  Guatemala  Guayaquil  Guyana  Havana  Indianapolis  Inuvik  Juneau  Louisville  Maceio  Marigot  Martinique  Mazatlan  Miquelon  Porto_Velho  Puerto_Rico  Recife  Resolute  Rio_Branco  Santarem  Scoresbysund  Sitka  St_Lucia  Tegucigalpa  Thule  Tijuana  Virgin  Whitehorse  Winnipeg
skylendar/skylendar-4.1nn/src/zoneinfo/Antarctica/PaxHeaders.21825/: DumontDUrville  Mawson  Rothera  South_Pole  Vostok
skylendar/skylendar-4.1nn/src/zoneinfo/Asia/PaxHeaders.21825/: Aqtau  Ashkhabad  Beirut  Bishkek  Chita  Chongqing  Dacca  Dhaka  Dubai  Irkutsk  Kabul  Kamchatka  Karachi  Kuching  Manila  Novokuznetsk  Oral  Pyongyang  Qatar  Qyzylorda  Rangoon  Tashkent  Tokyo  Ulaanbaatar  Ulan_Bator  Yakutsk  Yekaterinburg  Yerevan
skylendar/skylendar-4.1nn/src/zoneinfo/Atlantic/PaxHeaders.21825/: Madeira
skylendar/skylendar-4.1nn/src/zoneinfo/Australia/PaxHeaders.21825/: Brisbane  LHI  Yancowinna
skylendar/skylendar-4.1nn/src/zoneinfo/Brazil/PaxHeaders.21825/: West
skylendar/skylendar-4.1nn/src/zoneinfo/Canada/PaxHeaders.21825/: Central
skylendar/skylendar-4.1nn/src/zoneinfo/Etc/PaxHeaders.21825/: GMT+10  GMT-0  GMT-11
skylendar/skylendar-4.1nn/src/zoneinfo/Europe/PaxHeaders.21825/: Madrid  Rome  Vienna  Warsaw
skylendar/skylendar-4.1nn/src/zoneinfo/Indian/PaxHeaders.21825/: Kerguelen
skylendar/skylendar-4.1nn/src/zoneinfo/Pacific/PaxHeaders.21825/: Apia  Bougainville  Easter  Fiji  Majuro  Midway  Niue  Noumea  Pohnpei  Ponape  Tahiti  Tongatapu
skylendar/skylendar-4.1nn/src/zoneinfo/PaxHeaders.21825/: Africa  America  Arctic  Asia  Cuba  Egypt  Eire  GMT+0  Greenwich  Iran  Israel  Japan  Kwajalein  Libya  PRC  Pacific  Portugal  Turkey  UTC  Zulu  iso3166.tab  posix  posixrules  right  zone.tab  zone1970.tab
skylendar/skylendar-4.1nn/src/zoneinfo/US/PaxHeaders.21825/: Mountain
skylendar/skylendar-4.1nn/src/zoneinfo/posix/Africa/PaxHeaders.21825/: Addis_Ababa  Banjul  Ceuta  Lome  Luanda
skylendar/skylendar-4.1nn/src/zoneinfo/posix/America/PaxHeaders.21825/: Anchorage  Bahia  Belize  Havana  New_York  Rosario
skylendar/skylendar-4.1nn/src/zoneinfo/posix/Antarctica/PaxHeaders.21825/: Troll
skylendar/skylendar-4.1nn/src/zoneinfo/posix/Arctic/PaxHeaders.21825/: Longyearbyen
skylendar/skylendar-4.1nn/src/zoneinfo/posix/Asia/: Beijing
skylendar/skylendar-4.1nn/src/zoneinfo/posix/Asia/PaxHeaders.21825/: Baghdad  (+1 more)
skylendar/skylendar-4.1nn/src/zoneinfo/posix/PaxHeaders.21825/: Africa  America  Asia  Australia  Brazil  CST6CDT  Factory  HST  Hongkong  Iceland  Israel  Japan  Kwajalein  ROC  UTC  posixrules
skylendar/skylendar-4.1nn/src/zoneinfo/right/Asia/: Beijing
skylendar/skylendar-4.1nn/src/zoneinfo/right/PaxHeaders.21825/: America  Atlantic  Chile  Cuba  EST5EDT  Eire  Etc  Europe  GB  Greenwich  Hongkong  Iceland  Iran  Israel  Japan  MET  PRC  Pacific  Poland  Portugal  ROC  UTC  WET
(+288 files in other folders)
